--- a/scss/_blocks/step-two.scss
+++ b/scss/_blocks/step-two.scss
@@ -21,9 +21,13 @@
         background: $bg-black;
         padding-bottom: 0;
         padding-right: 0;
+        transition: all .5s;
+        &:hover {
+            transform: scale(1.05);
+        }
     }
     &__link {
-        margin-right: 23px;
+        margin-right: 30px;
         padding-left: 45px;
         padding-top: 34px;
         overflow: hidden;
